hphp/hack/test/enum_supertyping/typing/includes-not-enum.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

class C {}

enum A : int {
  use C;
}
